Fix awkward in between layout bug with nav

--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -103,7 +103,7 @@ img.nav-logo {
     }
     img.nav-logo {
       margin: 10px auto 15px;
-      height: 8vmin;
+      height: 9.5vmin;
     }
   }
   div.nav-btn {
